[package]
name = "mhv"
version = "0.1.2"
edition = "2021"
description = "A minimalist hex viewer"
authors = ["Julio C. B. Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/mhv"
license = "MIT"
keywords = ["hexadecimal", "cli", "viewer"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
colored = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
anyhow = "1.0.75"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
lto = true
