[package]
name = "mhv"
version = "0.3.3"
edition = "2021"
description = "A minimalist hex viewer"
authors = ["Julio C. B. Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/mhv"
license = "MIT"
keywords = ["hexadecimal", "cli", "viewer"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"]}
owo-colors = "3.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
anyhow = "1.0.75"
strip-ansi-escapes = "0.2.0"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
lto = true
